--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
     "license": "MIT",
     "require": {
         "php": "^7.2",
+        "cartalyst/stripe-laravel": "^11.0",
         "darryldecode/cart": "~4.0",
         "fideloper/proxy": "^4.0",
         "laravel/framework": "^6.2",
