--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
         "laravel/framework": "^6.2",
         "laravel/tinker": "^1.0",
         "laravelcollective/html": "^6.0",
-        "elasticquent/elasticquent": "dev-master"
+        "elasticsearch/elasticsearch": "^7.0"
     },
     "require-dev": {
         "facade/ignition": "^1.4",
