--- a/composer.json
+++ b/composer.json
@@ -9,13 +9,13 @@
     "license": "MIT",
     "require": {
         "php": "^7.2",
+        "symfony/translation": "4.3.8",
         "cartalyst/stripe-laravel": "^11.0",
         "darryldecode/cart": "~4.0",
         "fideloper/proxy": "^4.0",
         "laravel/framework": "^6.2",
         "laravel/tinker": "^1.0",
-        "laravelcollective/html": "^6.0",
-        "elasticsearch/elasticsearch": "^7.0"
+        "laravelcollective/html": "^6.0"
     },
     "require-dev": {
         "facade/ignition": "^1.4",
