--- a/composer.json
+++ b/composer.json
@@ -9,13 +9,14 @@
     "license": "MIT",
     "require": {
         "php": "^7.2",
-        "symfony/translation": "4.3.8",
         "cartalyst/stripe-laravel": "^11.0",
         "darryldecode/cart": "~4.0",
         "fideloper/proxy": "^4.0",
         "laravel/framework": "^6.2",
         "laravel/tinker": "^1.0",
-        "laravelcollective/html": "^6.0"
+        "laravelcollective/html": "^6.0",
+        "symfony/translation": "4.3.8",
+        "tcg/voyager": "^1.3"
     },
     "require-dev": {
         "facade/ignition": "^1.4",
@@ -58,5 +59,11 @@
         "post-create-project-cmd": [
             "@php artisan key:generate --ansi"
         ]
+    },
+    "repositories": {
+        "hooks": {
+            "type": "composer",
+            "url": "https://larapack.io"
+        }
     }
 }
