--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "laravel/framework": "^6.2",
         "laravel/tinker": "^1.0",
         "laravelcollective/html": "^6.0",
+        "nicolaslopezj/searchable": "^1.12",
         "symfony/translation": "4.3.8",
         "tcg/voyager": "^1.3"
     },
